force-app/main/default/objects/Call_Comments__c/Call_Comments__c.object-meta.xml
<CustomObject>
    <label>Call Comments</label>
    <nameField>
        <displayFormat>CC - {00000}</displayFormat>
        <label>Call Comments Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Call Comments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>