force-app/main/default/objects/Call_Comments__c/fields/Created_user__c.field-meta.xml
<CustomField>
    <fullName>Created_user__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Created User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Call_Comments</relationshipName>
    <type>Lookup</type>
</CustomField>