force-app/main/default/objects/Call_Comments__c/fields/Related_Source__c.field-meta.xml
<CustomField>
    <fullName>Related_Source__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Source</label>
    <referenceTo>Related_Source__c</referenceTo>
    <relationshipLabel>Call Comments</relationshipLabel>
    <relationshipName>Call_Comments</relationshipName>
    <type>Lookup</type>
</CustomField>