force-app/main/default/objects/Call_Comments__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <label>Title</label>
    <length>220</length>
    <type>Text</type>
</CustomField>